Update plan-c.html - remove PMBOK 5th edition link
The link given for the Free eText takes the student to a 5th edition version of the PMBOK guide which is confusing for the students. I'm recommending that we just remove the link especially since the link doesn't help the student see or understand the difference between the editions.

--- a/resources/plan-c.html
+++ b/resources/plan-c.html
@@ -92,13 +92,7 @@
               href="https://ebookcentral.proquest.com/lib/byui/reader.action?docID=5180849"
               target="_blank"
               >Project Management Body of Knowledge (PMBOK) Guide, 6th
-              Edition</a
-            >
-            Electronic copy, or
-            <a
-              href="http://proquestcombo.safaribooksonline.com.byui.idm.oclc.org/book/software-engineering-and-development/project-management/9781935589679"
-              >Free eText through eBookCentral</a
-            >
+              Edition</a>
           </li>
         </ul>
         <h2>Additional information</h2>
