Bold on appointments

--- a/resources/syllabus.html
+++ b/resources/syllabus.html
@@ -4,7 +4,7 @@
         <hr>
         <h2>Instructor Contact Information</h2>
         <p>Brother Kory Godfrey</br>
-        Appointments: <a href="https://www.calendly.com/kory-godfrey">https://www.calendly.com/kory-godfrey</a> </p>
+        <em>Appointments:</em> <a href="https://www.calendly.com/kory-godfrey">https://www.calendly.com/kory-godfrey</a> </p>
         <p>Welcome to CIT 380 Project Management! This course is designed to help you learn to use project management knowledge, tools, and techniques to plan, implement, and manage coordinated work efforts and solve business problems. The course will give you the opportunity to organize and plan the elements of one-time, unique endeavors that add value to an organization. Emphasis is on developing both the “soft” skills such as working with people as well as the “hard” skills including tools, techniques and methods of professional project managers.</p>
         <p>The primary goal of the course is to help you improve your answers to the questions “How am I growing as a project manager?” and “How do I learn to take matter unorganized and organize it into something that will benefit others?”</p>
         <p>This typicaly involves coordinating people, tools, equipment, raw materials, schedules, budgets, stakeholder relations, quality planning, testing, and numerous other “details” in order to achieve a goal. In short, the term management has to do with how to bring order to complexity.</p>
